# FleelTelemetryMonitoring

./: .gitignore  ADR.md  AI_INTERACTION_LOG.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  database.py  error_handlers.py  exceptions.py  logging_conf.py  main.py
backend/app/constants/: __init__.py
backend/app/middleware/: request_logging.py
backend/app/models/: __init__.py  anomaly.py  maintenance_record.py  mission.py  telemetry_event.py  vehicle.py  zone_count.py
backend/app/routers/: __init__.py  anomalies.py  fleet.py  telemetry.py  zones.py
backend/app/schemas/: __init__.py  anomalies.py  fleet.py  telemetry.py  zones.py
backend/app/services/: __init__.py  anomaly.py  fault_transition.py  seed.py  telemetry.py  zone_count.py
backend/tests/: conftest.py  test_api_errors.py  test_fault_and_fleet.py  test_telemetry.py  test_zones_anomalies.py
backend/tests/e2e/: test_fleet_ingestion_smoke.py
docker/postgres/: init-test-db.sql
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tsconfig.node.json  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AppHeader.tsx  BatteryBar.tsx  FleetStateCards.tsx  RecentAnomaliesPanel.tsx  SeverityChip.tsx  StatusChip.test.tsx  StatusChip.tsx  VehicleTable.tsx  ZoneCountsPanel.tsx
frontend/src/hooks/: useFleetDashboardData.ts
frontend/src/utils/: anomalyUtils.ts  formatters.ts
